scss/app.scss
// Material design variables
// -------------------------------

// Baseline grids
$imd-component-baseline-grid:     8px;
$imd-type-baseline-grid:          4px;
$imd-iconography-baseline-grid:   8px;

// Type
$imd-font-family-base:            "Roboto", sans-serif  !default;
$imd-font-family-thin:            "Roboto-Thin" !default;
$imd-font-family-light:           "Roboto-Light", sans-serif-light !default;
$imd-font-family-medium:          "Roboto-Medium" !default;
$imd-font-family-bold:            "Roboto-Bold" !default;
$imd-font-family-black:           "Roboto-Black" !default;

// Type Maps
$imd-button:            (family: $imd-font-family-medium, transform: uppercase);
$imd-caption:           (size: 12px);
$imd-body-1-device:     ();
$imd-body-1-desktop:    (size: 13px);
$imd-body-2-device:     (family: $imd-font-family-medium,);
$imd-body-2-desktop:    (family: $imd-font-family-medium, size: 13px);
$imd-subhead-device:    (size: 16px);
$imd-subhead-desktop:   (size: 15px);
$imd-title:             (family: $imd-font-family-medium, size: 20px);
$imd-headline:          (size: 24px);
$imd-display-1:         (size: 34px);
$imd-display-2:         (size: 45px);
$imd-display-3:         (size: 56px);
$imd-display-4:         (family: $imd-font-family-light, size: 112px);

$button-material-design-bg:             #424242 !default;
$button-material-design-border:         #ddd !default;
$button-material-design-text:           rgba(255,255,255,0.87) !default;
$button-material-design-active-bg:      #fafafa !default;
$button-material-design-active-border:  #ccc !default;

// Type Mixins
@mixin imd-type-style($family: $imd-font-family-base, $size: 14px, $transform: none) {
  font-family: $family;
  font-size: $size;
  text-transform: $transform;
}


// Ionicons variables
// --------------------------

$ionicons-font-path:              "../lib/ionic/fonts";


// Base
// -------------------------------

$font-family-sans-serif:          $imd-font-family-base;
$font-family-light-sans-serif:    $imd-font-family-light;

$font-family-base:                $imd-font-family-base;


// Buttons
// -------------------------------




// Bars
// -------------------------------

$bar-height:                      64px !default;
$bar-title-font-size:             17px !default;
$bar-padding-portrait:            5px !default;
$bar-padding-landscape:           5px !default;
$bar-transparency:                1 !default;

$bar-material-design-bg:                    rgba(#424242, $bar-transparency) !default;
$bar-material-design-text:                  rgba(255,255,255,0.87) !default;
$bar-material-design-border:                #ddd !default;
$bar-material-design-active-bg:             #fafafa !default;
$bar-material-design-active-border:         #ccc !default;


// Lists
// -------------------------------

$list-header-bg:                  transparent !default;
$list-header-color:               #222 !default;
$list-header-padding:             5px 15px !default;
$list-header-margin-top:          20px !default;


// Items
// -------------------------------

$item-font-size:                  16px !default;
$item-border-width:               1px !default;
$item-padding:                    16px !default;

$item-button-font-size:           18px !default;
$item-button-line-height:         32px !default;
$item-icon-font-size:             32px !default;
$item-icon-fill-font-size:        28px !default;

$item-icon-accessory-color:       #ccc !default;
$item-icon-accessory-font-size:   16px !default;

$item-avatar-width:               40px !default;
$item-avatar-height:              40px !default;
$item-avatar-border-radius:       4px !default;

$item-thumbnail-width:            80px !default;
$item-thumbnail-height:           80px !default;
$item-thumbnail-margin:           10px !default;

$item-divider-bg:                 #f5f5f5 !default;
$item-divider-color:              #222 !default;
$item-divider-padding:            5px 15px !default;

$item-material-design-bg:                   $button-material-design-bg !default;
$item-material-design-border:               transparent !default;
$item-material-design-text:                 $button-material-design-text !default;
$item-material-design-active-bg:            $button-material-design-active-bg !default;
$item-material-design-active-border:        $button-material-design-active-border !default;


// Menus
// -------------------------------

$menu-bg:                         #424242 !default;

$menu-width:                      256px !default;
$menu-animation-speed:            200ms !default;

$menu-side-shadow:                -1px 0px 2px rgba(0, 0, 0, 0.2), 1px 0px 2px rgba(0,0,0,0.2) !default;

@import "ionic/ionic";

body,
.ionic-body {
  font-family: $imd-font-family-base;
}

.imd-button {
  @include imd-type-style($imd-button...);
}

.imd-caption {
  @include imd-type-style($imd-caption...);
}

.imd-body-1-device {
  @include imd-type-style($imd-body-1-device...);
}

.imd-body-1-desktop {
  @include imd-type-style($imd-body-1-desktop...);
}

.imd-body-2-device {
  @include imd-type-style($imd-body-2-device...);
}

.imd-body-2-desktop {
  @include imd-type-style($imd-body-2-desktop...);
}

.imd-subhead-device {
  @include imd-type-style($imd-subhead-device...);
}

.imd-subhead-desktop {
  @include imd-type-style($imd-subhead-desktop...);
}

.imd-title {
  @include imd-type-style($imd-title...);
}

.imd-headline {
  @include imd-type-style($imd-headline...);
}

.imd-display-1 {
  @include imd-type-style($imd-display-1...);
}

.imd-display-2 {
  @include imd-type-style($imd-display-2...);
}

.imd-display-3 {
  @include imd-type-style($imd-display-3...);
}

.imd-display-4 {
  @include imd-type-style($imd-display-4...);
}

/*
 * Styles to create the mailbox look and feel
 */
.list-pane,
.list-pane-header {
  width: 320px;
}

.detail-pane {
  width: calc(100% - 320px);
  left: 320px;
  box-shadow: -1px 0px 5px rgba(0,0,0,.3);
}

/* Side menu styles to be refactored
 * Notes as follows...
 *
 * Using 64px as toolbar height, therefore menu width 4 x that = 224px
 * 48px is the height of the menu item with padding
 * icon size is 24px with text font of 14px using Roboto-Medium
 * The open visible piece is 64px
 */

.menu-content {
  left: 72px !important;
  width: calc(100% - 72px) !important;
  box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.3);
}

.menu-open .menu-content {
  -webkit-transform: translate3d(176px, 0px, 0px) !important;
}

.bar-side-menu {
  @include bar-style($bar-material-design-bg, $bar-material-design-border, $bar-material-design-text);
  background-image: linear-gradient(0deg, #212121, #212121 50%, transparent 50%);
  &.bar-footer{
    background-image: linear-gradient(180deg, $bar-material-design-border, $bar-material-design-border 50%, transparent 50%);
  }

  padding: 0;
}

.avatar-button {
  padding: 0;
  border-radius: 50%;

  .avatar-button-content {
    width: 40px;
    height: 40px;
    background-color: rgba(255, 255, 255, 0.87);
    display: block;
    border-radius: 50%;
    margin: 12px 16px;
  }
}

.item-side-menu {
  @include item-style($item-material-design-bg, $item-material-design-border, $item-material-design-text);
  border: 1px solid transparent;
}

.item-side-menu.item-icon-left .item-content {
  padding: 0;
  padding-left: 72px;
  line-height: 48px;
}

.item-side-menu .icon {
  left: 24px;
  font-size: 24px;
}

.item-side-menu .icon:before {
  width: 24px;
}

.item-complex .item-content {
  background-color: transparent;
  font-family: $imd-font-family-medium;
  font-size: 14px;
  color: rgba(255, 255, 255, 0.87);
}

.item-divider {
  border: none;
  border-bottom: 1px solid #000;
  padding-top: 0px;
  padding-bottom: 8px;
  margin-bottom: 8px;
  min-height: 0px;
  background-color: transparent;
}

.item-divider.menu-list-divider-top {
  border: none;
  padding-top: 0;
  padding-bottom: 8px;
  margin-bottom: 0;
  min-height: 0;
  background-color: transparent;
}

.item.active,
.item .item-content.activated,
.item-complex.active .item-content {
  border-color: transparent;
  background-color: rgba(255, 255, 255, 0.05);
  color: #fff;
}


/* List item style for mailbox look and feel
 * Notes as follows...
 *
 * Using icon with 1 line text tile = 48px
 * Using icon with 2 line text tile = 72px
 * Using icon with 3 line text tile = 88px
 *
 * Using 88px Tile the title font is 16px regular with line height of 20px
 * the two following lines are 14px with line height of 18px, combined text = 56px
 */

.item-thumbnail-left {
  min-height: 48px;
}

.item-thumbnail-left .item-content {
  min-height: 48px;
  padding: 16px;
}

.item-thumbnail-left .item-content .tile-left {
  float: left;

  img {
    height: 40px;
    width: 40px;
    border-radius: 40px;
  }
}

.item-thumbnail-left .item-content .tile-right {
  padding-left: 56px;
}

.item-content h2,
.item-content p {
  font-family: "Roboto";
  font-weight: normal;
}

.item-content h2 {
  line-height: 20px;
  margin: 0;
}

.item-content p {
  white-space: normal;
  line-height: 18px;
}


/*
 * List page bar Title
 */
.list-pane .bar .title {
  margin: 0;
  font-family: "Roboto-Medium";
  font-size: 20px;
  line-height: 64px;
  font-weight: normal;
  left: 72px !important;
}

.list-pane .bar.bar-md,
.detail-pane .bar.bar-md {
  box-shadow: 0 1px 5px rgba(0,0,0,.3);
  padding: 0;
}

.pane-dummy-header {
  height: 64px;
  display: block;
  content: "";
  box-shadow: 0 1px 5px rgba(0,0,0,.3);
  background-color: transparent;
  pointer-events: none;
}

